--- a/vanilla-ts-combo/package.json
+++ b/vanilla-ts-combo/package.json
@@ -13,6 +13,7 @@
     "vite": "^4.1.0"
   },
   "dependencies": {
-    "axios": "^1.3.2"
+    "axios": "^1.3.2",
+    "currency-symbol-map": "^5.1.0"
   }
 }
